* Added pathfinding for all mazes (not most efficient, not factorized output, just basic pathfinding with right-hand method) * Closes #6 * NOTE: currently printing to console for visibility, will be fixed in later commit